bin/k8s/mogul-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mogul-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mogul-service
  template:
    metadata:
      labels:
        app: mogul-service
    spec:
      containers:
        - name: mogul-service-container
          image: us-docker.pkg.dev/joshlong/mogul-artifact-registry/authorization-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: mogul-service-service
spec:
  type: NodePort
  selector:
    app: mogul-service
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mogul-service-ingress
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.global-static-ip-name: "mogul-mogul-service-ip"
    networking.gke.io/managed-certificates: "mogul-service-certificate"
spec:
  rules:
    - host: api.media-mogul.io
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/*"
            backend:
              service:
                name: mogul-service-service
                port:
                  number: 8080
